# openclaw-guardrail

./: .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  TODO.md  bump.sh  docker-compose.yml  install_plugin.sh  package.sh  uninstall.sh
docs/: ARTICLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  USER_GUIDE.md
openclaw-guardrail/: SKILL.md
openclaw-guardrail-plugin/: openclaw.plugin.json  package-lock.json  package.json
openclaw-guardrail-plugin/src/: agents-md.ts  asset-report.ts  audit-log.ts  dlp.ts  fetch-interceptor.ts  index.ts  policy.ts  response-builder.ts  skill-audit.ts  types.ts  utils.ts
openclaw-guardrail-plugin/src/__tests__/: fetch-interceptor.test.ts  plugin-hooks.test.ts
openclaw-guardrail/references/: feature1-workflow.md  feature2-skill-audit.md  output-template-zh.md  scan-json-schema.json  skill_audit_patterns.md  zero-trust-guardrails.md
openclaw-guardrail/references/scripts/: check-scan-json.sh
openclaw-install/: install.sh
server/: auth.py  cache.py  cli.py  config.py  database.py  main.py  models.py  pyproject.toml
server/routers/: activation.py  asset_report.py  intel_router.py  llm_check.py  marketplace.py  policy.py  reports.py  violations.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.vue  style.css
web/src/api/: index.ts
web/src/layout/: AdminLayout.vue
web/src/router/: index.ts
web/src/views/: AssetsView.vue  DashboardView.vue  DevicesView.vue  KeysView.vue  LoginView.vue  PolicyView.vue  ReportsView.vue  ViolationsView.vue
