[project]
name = "openclaw-security-server"
version = "0.1.0"
description = "OpenClaw 企业安全服务（设备激活、策略下发、违规记录、情报缓存、插件分发）"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0",
    "redis>=5.0.0",
    "pydantic>=2.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
serve = "main:start"
manage = "cli:main"
